force-app/main/default/objects/Apttus_Config2__PriceEscalator__c/Apttus_Config2__PriceEscalator__c.object-meta.xml
<CustomObject>
    <description>Represents a price escalator for a price ramp</description>
    <label>Price Escalator</label>
    <nameField>
        <displayFormat>PE-{00000000}</displayFormat>
        <label>Escalator Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Escalators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>