force-app/main/default/objects/Apttus_Config2__PriceEscalator__c/fields/Apttus_Config2__AdjustmentSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentSource__c</fullName>
    <description>Indicates the source for the adjustment</description>
    <inlineHelpText>Indicates the source for the adjustment</inlineHelpText>
    <label>Adjustment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Ramp</fullName>
            </value>
            <value>
                <fullName>Previous Ramp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>