force-app/main/default/objects/Apttus_Config2__PriceEscalator__c/fields/Apttus_Config2__PriceListItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListItemId__c</fullName>
    <description>ID of the associated price list item</description>
    <inlineHelpText>ID of the associated price list item</inlineHelpText>
    <label>Price List Item</label>
    <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
    <relationshipLabel>Price Escalators</relationshipLabel>
    <relationshipName>PriceEscalators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>